Bug 1535800 - Part 1: Handle a null mSessionHistory in ResumeRedirectedLoad, r=qdot

Differential Revision: https://phabricator.services.mozilla.com/D30558